# Zhudi

./: .dockerignore  .gitignore  COPYING.tex  Dockerfile  NEWS  PKGBUILD  README  README.md  README.mk  cli.py  data.py  db_fill.py  dict_test.u8  gui.py  launch.sh  main.py  pinyin_to_zhuyin_table.py  pyproject.toml  setup.py  shell.nix  test.py  test_cli.py  tests.py  zhu  zhudi  zhudi.py  zhudi.sh  zhudi_chinese_table.py  zhudi_core.py  zhudi_data.py  zhudi_processing.py
Tests/: TODO  test.py
doc/: Makefile  code_doc.rst  conf.py  tutorial.rst
doc/_build/doctrees/: code_doc.doctree  environment.pickle  index.doctree  introduction.doctree  tutorial.doctree
doc/_build/html/: .buildinfo  code_doc.html  genindex.html  index.html  introduction.html  objects.inv  search.html  searchindex.js  tutorial.html
doc/_build/html/_sources/: code_doc.txt  index.txt  introduction.txt
doc/_build/html/_static/: searchtools.js
scripts/: zhu  zhudi  zhudi_cli.py  zhudi_gui.py
tests/: pinyin  simplified  test_processing.py  traditional  translation  zhuyin
zhudi/: __init__.py  __main__.py  chinese_table.py  data.py  dictionaries.py  gui.py  preferences.py  processing.py  row.py  zhudi_cli.py  zhudi_gui.py  zhudi_processing.py
zhudi-data/: array30  cangjie5  wubi86
zhudi/ui/: application.py  dictionary.py  main_window.py  options.py  segmentation.py
